hphp/test/zend/bad/ext/phar/tests/zip/corrupt_005.php
<?php
try {
	new PharData(dirname(__FILE__) . '/files/encrypted.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
?>
===DONE===